
      - Fix for TOCs and AutoTOCS where docs that didn't have a title
        didn't appear because the link was empty (it was there). Now the
        id shows up so visitors can at least click it.

      - Renevated the TOC/AutoToc rendering, replacing the ancient,
        legacy, Netscape4 compatible image-based indent, where long titles
        break onto the next, non-indented line. Updated frontend.css with
        new selectors for the TOC levels.

      - Tocs display links with a trailing slash because there may be 
        'edit/tab_preview' appended to it, but this conflicts with links made 
        in the editor that are rendered without the slash. Moved the slash 
        into the appendage.

      - Removed get_layout_macro(.py) from the layout installation code and
        thus it won't be present in the ZODB in future new installs. This is
        legacy code from the doomed layout service development that has now
        been superceded by SilvaLayout. Existing get_layout_macro python 
        scripts can be deleted.

      - Updated standard_error_message with direct call of layout_macro.html,
        404 in title, adjusted informative text.

      - index items now have an 'index title' attribute in addition to an 
        'anchor name' attribute. The title is used for displaying in an 
        indexer. The name is used for the anchor, and thus should be a valid
        anchor name.
        
        If no title is given, the index is considered a 'pure' anchor, and
        will not be found by Indexers.

    Ported from 1.5 branch

      - alt attribute for meta_type icons now have the name of the meta_type
        instead of 'Unknown Metatype' (Issue 1654)

      - Simplified the content.html layout file to make it easier to understand. 
        Moved the content call into the layout macro. Reformatted the comments.

      - Default installations will have the html meta tags and accessibility