@@ -10,6 +10,9 @@ from AccessControl import ClassSecurityInfo
 from Persistence import Persistent
 from OFS.SimpleItem import SimpleItem
 
+#XXX log
+from zLOG import LOG,INFO
+
 # products
 from Products.ParsedXML.ParsedXML import ParsedXML
 
@@ -18,6 +21,7 @@ from Products.Silva.Content import Content
 from Products.Silva import SilvaPermissions
 from Products.Silva.i18n import translate as _
 from Products.Silva.interfaces import IAutoTOC, IContainerPolicy
+from Products.Silva.adapters import tocrendering
 
 class AutoTOC(Content, SimpleItem):
     __doc__ = _("""This is a special document that automagically displays a
@@ -43,25 +47,41 @@ class AutoTOC(Content, SimpleItem):
         """
         return 0
 
+    security.declareProtected(SilvaPermissions.ChangeSilvaContent, 'is_deletable')
     def is_deletable(self):
         """always deletable"""
         return 1
 
+    security.declareProtected(SilvaPermissions.ChangeSilvaContent, 'can_set_title')
     def can_set_title(self):        
         """always settable"""
         # XXX: we badly need Publishable type objects to behave right.
         return 1
+
+    security.declareProtected(SilvaPermissions.ChangeSilvaContent, 'set_toc_depth')
     def set_toc_depth(self, depth):
+        LOG('setting',INFO,'depth: ' + str(depth))
         self._toc_depth = depth
         
+    security.declareProtected(SilvaPermissions.AccessContentsInformation,
+                              'toc_depth')
     def toc_depth(self):
         """get the depth to which the toc will be rendered"""
         return self._toc_depth
     
+    security.declareProtected(SilvaPermissions.AccessContentsInformation,
+                              'render_tree')
+    def render_tree(self, public=1,append_to_url=None):
+        """Get adapter to render this autotoc's tree"""
+        adapter = tocrendering.getTOCRenderingAdapter(self)
+        return adapter.render_tree(public,append_to_url)
+
 InitializeClass(AutoTOC)
 
 def manage_addAutoTOC(self, id, title, depth=-1, REQUEST=None):
     """Add a autotoc."""
+    LOG('add',INFO,'depth: ' + str(depth))
+    aaa
     if not mangle.Id(self, id).isValid():
         return
     object = AutoTOC(id)
@@ -69,6 +89,7 @@ def manage_addAutoTOC(self, id, title, depth=-1, REQUEST=None):
     object = getattr(self, id)
     object.set_title(title)
     object.set_toc_depth(depth)
+    LOG('afteradd',INFO,'depth: ' + str(object.toc_depth))
     add_and_edit(self, id, REQUEST)
     return ''
 
