@@ -189,32 +189,6 @@ p.annotation {
   font-style: italic;
 }
 
-/* toc levels */
-p.toc {
-  margin: 0.3em;
-}
-p.level-0 {
-  margin-left: 0;
-}
-p.level-1 {
-  margin-left: 2em;
-}
-p.level-2 {
-  margin-left: 4em;
-}
-p.level-3 {
-  margin-left: 6em;
-}
-p.level-4 {
-  margin-left: 8em;
-}
-p.level-5 {
-  margin-left: 10em;
-}
-p.level-6 {
-  margin-left: 12em;
-}
-
 div.citation {
   margin: 1em 3em;
   padding: 0.4em 2em 1.2em 2em;
