@@ -1,29 +1,22 @@
 <tal:def
   define="
     model request/ghost_model | request/model;
-    toc_depth model/toc_depth;
     public options/public | nothing;
-    title_method python: test(public, 'get_title', 'get_title_editable');
-    tree python: here.get_tree(model=model, toc_depth=toc_depth, public=public);
     append_to_url options/append_to_url | string:/edit/tab_edit;
 ">
-<h2 class="heading"
-  tal:content="model/get_title">
-    Title
+<h2 class="heading" 
+  tal:define="heading model/get_title"
+  tal:condition="not:request/other/suppress_title | nothing" 
+  tal:content="heading"
+  tal:omit-tag="not:heading">
+  Title
 </h2>
 
-<tal:loop 
-  repeat="obj tree">
-  <tal:def define="
-      indent python:obj[0]; 
-      item python:obj[1];
-      title python:getattr(obj[1], title_method)();
-      url string:${item/absolute_url}${append_to_url}">
-    <p tal:attributes="class string:toc level-$indent">
-      <a tal:attributes="href url"
-        tal:content="python:title and title or item.id">
-        title
-      </a>
-    </p></tal:def>
-</tal:loop>
+<p class="content-description"
+   tal:define="desc python:context.service_metadata.getMetadataValue(model,'silva-extra','content_description',acquire=0)"
+   tal:condition="desc"
+   tal:content="desc" />
+
+<ul tal:replace="structure python:model.render_tree(public,append_to_url)" />
+
 </tal:def>
